codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__coalesces_reads_across_multiple_calls.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 2134
expression: rendered
---

CODEX · Tool Calls

┊ ✓ Explored · 3 commands
