codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__coalesces_sequential_reads_within_one_call.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---

CODEX · Tool Call
┊ ✓ Explored · 1ms · 0 lines · Ctrl+T details
