codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_image_after_text_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1611
expression: rendered
---

CODEX · Tool Calls
┊ ✓ image.generate · 25ms · Ctrl+T details
