codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_multiple_outputs_inline_snapshot.snap
---
source: tui/src/history_cell/tests.rs
assertion_line: 1871
expression: rendered
---

CODEX · Tool Calls

┊ ✓ metrics.summary
