codex-rs/tui/src/history_cell/snapshots/codex_tui__history_cell__tests__completed_mcp_tool_call_wrapped_outputs_snapshot.snap
---
source: tui/src/history_cell/tests.rs
expression: rendered
---

CODEX · Tool Calls

┊ ✓ metrics.ge… · 1.28s · Ctrl+T details
